--- a/packages/components/src/sender/vars.less
+++ b/packages/components/src/sender/vars.less
@@ -36,7 +36,6 @@
   // 输入框
   --tr-sender-textarea-min-height: 26px;
   --tr-sender-textarea-line-height: 26px;
-  --tr-sender-input-height: 26px;
   --tr-sender-input-font-size: 16px;
 
   // 插槽变量
@@ -47,17 +46,19 @@
   --tr-sender-header-padding: 10px;
 
   // 前缀插槽 (Prefix)
-  --tr-sender-prefix-width: 60px;
+  --tr-sender-prefix-width: 28px;
   --tr-sender-prefix-min-width: 44px;
   --tr-sender-prefix-hover-bg: #f5f5f5;
-  --tr-sender-prefix-padding-top: 8px;
+  --tr-sender-prefix-padding-top: 12px;
   --tr-sender-prefix-padding-left: 16px;
+  --tr-sender-prefix-padding-right: 8px;
 
   // 内容区域 (Content)
   --tr-sender-content-min-width: 180px;
-  --tr-sender-content-padding: 15px 10px 12px 24px;
-  --tr-sender-content-padding-with-prefix: 15px 10px 10px 8px;
+  --tr-sender-content-padding-with-prefix: 12px 16px 0 0;
   --tr-sender-content-flex-grow: 1;
+  --tr-sender-content-padding-single: 12px 16px 12px 24px;
+  --tr-sender-content-padding-multiple: 15px 10px 0 24px;
 
   // 操作区域 (Actions)
   --tr-sender-actions-min-width: 32px;
@@ -67,13 +68,13 @@
   --tr-sender-actions-padding-right: 10px;
 
   // 底部插槽 (Footer)
-  --tr-sender-footer-min-height: 48px;
+  --tr-sender-footer-min-height: 36px;
   --tr-sender-footer-bg: #fff;
   --tr-sender-footer-hover: #f9f9f9;
 
   // 其余变量
   --tr-sender-container-min-height: 42px;
-  --tr-sender-bottom-row-padding-top: 2px;
+  --tr-sender-bottom-row-padding-top: 12px;
   --tr-sender-disabled-opacity: 0.7;
   --tr-sender-action-button-disabled-opacity: 0.6;
   --tr-sender-error-bottom-offset: -20px;
