--- a/packages/components/src/sender/vars.less
+++ b/packages/components/src/sender/vars.less
@@ -72,6 +72,11 @@
   --tr-sender-footer-bg: #fff;
   --tr-sender-footer-hover: #f9f9f9;
 
+  // Tips
+  --tr-sender-tips-line-height: 32px;
+  --tr-sender-tips-margin-left: 4px;
+
+
   // 其余变量
   --tr-sender-container-min-height: 42px;
   --tr-sender-bottom-row-padding-top: 12px;
