--- a/packages/components/src/sender/vars.less
+++ b/packages/components/src/sender/vars.less
@@ -71,9 +71,9 @@
   --tr-sender-footer-bg: #fff;
   --tr-sender-footer-hover: #f9f9f9;
 
-  // Tips
-  --tr-sender-tips-line-height: 32px;
-  --tr-sender-tips-margin-left: 4px;
+  // Decorative Content
+  --tr-sender-decorative-content-line-height: 32px;
+  --tr-sender-decorative-content-margin-left: 4px;
 
 
   // 其余变量
