--- a/packages/components/src/sender/vars.less
+++ b/packages/components/src/sender/vars.less
@@ -20,7 +20,7 @@
   --tr-sender-gap: 8px;
   --tr-sender-input-height: 26px;
   --tr-sender-input-min-height: 60px;
-  --tr-sender-icon-size: 22px;
+  --tr-sender-icon-size: 32px;
   --tr-sender-icon-size-small: 18px;
 
   // 字体
@@ -66,6 +66,29 @@
   --tr-sender-actions-padding-left: 10px;
   --tr-sender-actions-padding-right: 10px;
 
+  // ActionButtons组件变量
+  --tr-action-buttons-gap: 12px;
+  --tr-action-utility-buttons-gap: 4px;
+  --tr-action-buttons-border-radius: 8px;
+  --tr-action-buttons-icon-size: 32px;
+  --tr-action-buttons-icon-size-close: 22px;
+  --tr-action-buttons-icon-size-send: 36px;
+  --tr-action-buttons-icon-size-stop: 24px;
+  --tr-action-buttons-submit-margin: 12px;
+  --tr-action-buttons-cancel-height: 36px;
+  --tr-action-buttons-cancel-gap: 4px;
+  --tr-action-buttons-cancel-padding: 4px 12px 4px 6px;
+  --tr-action-buttons-cancel-bg: rgba(20, 118, 255, 0.06);
+  --tr-action-buttons-cancel-border-radius: 99px;
+  --tr-action-buttons-cancel-font-size: 14px;
+  --tr-action-buttons-submit-content-gap: 6px;
+  --tr-action-buttons-submit-content-line-height: 32px;
+  --tr-action-buttons-cancel-text-height: 24px;
+  --tr-action-buttons-cancel-text-line-height: 24px;
+  --tr-action-buttons-send-bg-color: #1476FF;
+  --tr-action-buttons-send-border-radius: 18px;
+  --tr-action-buttons-send-hover-bg-color: #126deb;
+
   // 底部插槽 (Footer)
   --tr-sender-footer-min-height: 36px;
   --tr-sender-footer-bg: #fff;
@@ -101,4 +124,7 @@
   --tr-sender-prefix-hover-bg: #333;
   --tr-sender-footer-bg: #2c2c2c;
   --tr-sender-footer-hover: #3a3a3a;
+
+  // ActionButtons组件暗色主题变量
+  --tr-action-buttons-cancel-bg: rgba(20, 118, 255, 0.1);
 }
