--- a/packages/components/src/question/index.less
+++ b/packages/components/src/question/index.less
@@ -69,10 +69,11 @@ body.tr-modal-open {
       height: 32px;
       cursor: pointer;
       display: flex;
+      align-items: center;
       justify-content: center;
 
       &>svg {
-        font-size: 28px;
+        font-size: 16px;
       }
     }
 
