--- a/packages/components/src/suggestion/index.less
+++ b/packages/components/src/suggestion/index.less
@@ -55,10 +55,11 @@
     margin-right: 8px;
     cursor: pointer;
     display: flex;
+    align-items: center;
     justify-content: center;
 
     & > svg {
-      font-size: 28px;
+      font-size: 16px;
     }
   }
 
